# footix

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CONTRIBUTING.md  README.md  make.bat  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docs-deploy.yml  docs_rtd.yml  publish.yaml
docs/: README.md  requirements.txt
docs/source/: conf.py  footix.data_io.rst  footix.implied_odds.rst  footix.metrics.rst  footix.models.rst  footix.rst  footix.strategy.rst  footix.utils.rst  index.rst  installation.rst  modules.rst
footix/: __init__.py
footix/data_io/: __init__.py  base_scrapper.py  data_reader.py  data_scrapper.py  footballdata.py  understat.py  utils_scrapper.py
footix/implied/: __init__.py  implied.py
footix/implied_odds/: __init__.py  implied.py
footix/metrics/: Entropy.py  RPS.py  Zscore.py  __init__.py  abc_metric.py  metrics.py  metrics_function.py
footix/models/: Bayesian.py  Elo.py  Poisson.py  __init__.py  abstract_model.py  basic_poisson.py  bayes_xg.py  bayesian.py  dixon_coles.py  elo.py  hybrid_model.py  poisson.py  protocol_model.py  (+5 more)
notebooks/: bayesian.ipynb  elo.ipynb  poisson.ipynb  test_bayesian.ipynb
test/: test_bets.py  test_data.py  test_decorators.py  test_implied.py  test_metrics.py  test_selection_bets.py  test_strategy.py
tests/: test_bets.py  test_decorators.py  test_docs.py  test_implied.py  test_implied_bookmaker_poisson.py  test_score_matrix.py  test_selection_bets.py  test_simple.py  test_simple_strategy.py  test_strategy.py
(+26 files in other folders)
