[tool.poetry]
name = "pyfootix"
version = "0.2.0"
description = "Footix is a Python package for sports betting analysis and modeling, with a focus on football (soccer)."
authors = ["sneachchea"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "footix" }
]
repository = "https://github.com/SneachChea/footix"

[tool.poetry.dependencies]
python = ">=3.11, <3.14"
numpy = "^2.0.0"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
tqdm = "^4.65.0"
pymc = "^5.3.1"
pytensor = "^2.11.2"
torch = "^2.6.0"
requests = "^2.32.3"
networkx = "^3.4.2"
numpyro = "^0.18.0"
lxml = "^5.4.0"
cssselect = "^1.3.0"
jax = "^0.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pre-commit = "^3.5.0"
ruff = "^0.7.2"
mypy = "^1.3.0"
sphinx = "^8.1.3"
sphinx-autodoc-typehints = "^3.0.0"
sphinx-rtd-theme = "^3.0.2"
types-requests = "^2.32.0.20241016"
pytest-cov = "^7.0.0"
pydocstyle = "^6.3.0"
roman-numerals = "^4.1.0"
pygments = "^2.19.2"

[tool.ruff]
line-length = 99
target-version = "py311"
exclude = ["notebooks"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203"]

[tool.mypy]
ignore_missing_imports = true
exclude = "^docs/"



[build-system]
requires = ["poetry-core>=1.2.3"]
build-backend = "poetry.core.masonry.api"
